<resources>
    <string name="app_name">ScoreKeeper</string>
    <string name="team_one">Team 1</string>
    <string name="team_two">Team 2</string>
    <string name="team_one_score">0</string>
    <string name="team_two_score">0</string>
    <string name="team_one_faults">0</string>
    <string name="team_two_faults">0</string>
    <string name="add_goal_statement">+1 Goal</string>
    <string name="add_fault_statement">+1 Fault</string>
    <string name="title_goals">Goals</string>
    <string name="title_faults">Faults</string>
    <string name="end_game_statement">End Game</string>
</resources>
